# forged-kingdom

./: .gitignore  Cargo.toml  build.rs  flake.nix  rust-toolchain.toml  shell.nix
.cargo/: config.toml
assets/: README.md  registry.json
assets/blueprints/: Player.glb
assets/levels/: World.glb
dev_assets/: README.md  test_scene.blend
src/: character.rs  common_components.rs  core.rs  main.rs  world_map.rs
src/components/: README.md  mod.rs  player.rs  player_camera.rs
src/game/: mod.rs  ship.rs
src/game/player/: mod.rs
src/game/player/camera/: components.rs  mod.rs
src/game/scene/: mod.rs  test_scene.rs
src/plugins/: README.md  collider_proxy.rs  game.rs  mod.rs  player.rs  player_camera.rs  scene.rs
src/resources/: README.md  mod.rs
src/systems/: README.md  mod.rs  player.rs  player_camera.rs  scene.rs
src/utils/: README.md  mod.rs  proxy.rs
src/world_map/: mod.rs  plugin.rs
