[package]
name = "forged-kingdom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avian2d = { git = "https://github.com/Jondolf/avian", features = ["simd"] }
bevy = { version = "0.15.0", features = ["dynamic_linking", "wayland"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
