[package]
name = "forged-kingdom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main", features = ["simd"] }
bevy = { version = "0.15.1", features = ["dynamic_linking", "wayland"] }
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", tag = "v0.28.1" }
blenvy = { git = "https://github.com/kaosat-dev/blenvy", branch = "main" }
leafwing-input-manager = "0.16.0"

[patch.'https://github.com/kaosat-dev/blenvy']
blenvy = { git = "https://github.com/ptsd/Blenvy", branch = "blenvy-bevy-0.15" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
