[package]
name = "forged-kingdom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crates.io crates
avian3d = { version = "0.2", features = ["simd"] }
bevy = { version = "0.15.1", features = ["dynamic_linking", "wayland"] }
leafwing-input-manager = "0.16.0"
bevy-tnua = "0.21.0"
bevy-tnua-avian3d = "0.2.0"

# Git crates
# Not available on crates.io
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", tag = "v0.28.1" }
# Not updated to support 0.15 yet
blenvy = { git = "https://github.com/kaosat-dev/blenvy", branch = "main" }

[patch.'https://github.com/kaosat-dev/blenvy']
# Some fixes with the blender plugin
blenvy = { git = "https://github.com/TGRCdev/Blenvy", branch = "blenvy-bevy-0.15" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
